--- a/04-Ansible/07-Roles/Playbooks/webserver.yaml
+++ b/04-Ansible/07-Roles/Playbooks/webserver.yaml
@@ -1,5 +1,6 @@
 ---
 - hosts: web:db
   name: My Web Server Installation
-  roles: 
+  roles:
+  - role: "../Roles/server-common" 
   - role: "../Roles/apache"
